# mod

./: build.gradle  settings.gradle
.github/workflows/: build.yml  build2.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  pairip_bypass.cpp
app/src/main/java/com/flashmod/mod/: HookEntry.java  MainApp.java  ModOverlay.java
app/src/main/java/com/geminx/mod/: HookEntry.java  ItemData.java  MainApp.java  ModOverlay.java  NativeBypass.java  ZygoteInit.java
